# ah

./: .gitignore  Cargo.toml  README.md  env.nu  index.md
crates/lojban/: Cargo.toml  build.rs
crates/lojban/src/: genterfahi.rs  jbovlaste.rs  lerfu.rs  lib.rs  parsing.rs  siho_selylehu.rs  suhore_valsi.rs  tcita.rs  valsi.rs  vlalehu.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: _lib.rs  errors.rs  fasnu.rs  lib.rs  persistence.rs  prelude.rs  sidbo.rs
crates/sets/: Cargo.toml
crates/sets/src/: identities.rs  lib.rs
crates/stodi/: Cargo.toml
crates/stodi/src/: lib.rs
crates/tcita/: Cargo.toml
crates/tcita/examples/: moha.rs  tcita.rs
crates/tcita/macros/: Cargo.toml
crates/tcita/macros/src/: lib.rs
crates/tcita/src/: lib.rs
crates/timetracker/: Cargo.toml
crates/timetracker/src/: _main.rs  app_tracing.rs  cli.rs  db.rs  errors.rs  lib.rs  main.rs  prelude.rs  timetracker.rs  timetracker_ckaji.rs  timetracker_sidbo.rs
crates/timetracker/src/timetracker/: actions.rs  processing.rs  span.rs
crates/timetracker/src/timetracker/span/: processing.rs
sazycimde/iced/: Cargo.toml  README.md
sazycimde/iced/src/: homescreen.rs  lib.rs  main.rs  prelude.rs  timetracker.rs  toplevel.rs
