[workspace]
members = ["crates/*", "sazycimde/*",]
resolver = "3"

[workspace.dependencies]
# stodi = { path = "./crates/stodi" }
# ah-sets = { path = "./crates/sets"}
# ah-tcita = { path = "./crates/tcita"}
# ah-persistence = { path = "./crates/persistence"}
# ah-lojban = { path = "./crates/lojban"}
ah-timetracker = { path = "./crates/timetracker" }

[workspace.lints.rust]
non_camel_case_types = "allow"
