[package]
name = "ah-lojban"
version = "0.1.0"
edition = "2024"

[dependencies]
stodi.workspace = true
ah-sets.workspace = true
ah-tcita.workspace = true
contracts = "0.6.7"
thiserror = "2.0.17"
include_json = "0.1.1"
serde_json = "1.0.145"
compact_str = { version = "0.9.0", features = ["serde"] }
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
