[package]
name = "ah-timetracker"
version = "0.1.0"
edition = "2024"

[dependencies]
ah-persistence.workspace = true
ah-tcita.workspace = true
ah-lojban.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.45", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }

[lints]
workspace = true
