[package]
name = "ah-timetracker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.45", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
rand = "0.9.2"
uuid = "1.19.0"
surrealdb = "3.0.4"
surrealdb-types = "3.0.4"

[lints]
workspace = true
