[package]
name = "ah-sazycimde-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
ah-timetracker.workspace = true
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["from"] }
iced = { version = "0.14.0", features = ["tokio"] }
time = "0.3.45"
tracing = "0.1.37"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }


[lints]
workspace = true
